Fix search wrap on filters with shorter labels

--- a/src/styles/_filter.scss
+++ b/src/styles/_filter.scss
@@ -4,7 +4,7 @@
   .gc-select__multi-container,
   .gc-select__single-container  {
       .gc-search__input {
-        width: 80%;
+        width: 100%;
         padding: 0;
         border: none;
         background-color: transparent;
